--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
     "cSpell.words": [
+        "CGPA",
         "MERN",
         "Maina",
         "cleanit",
+        "debaray",
+        "debashis",
         "fontawesome",
         "gotcharides",
+        "maxlength",
         "noreferrer"
     ]
 }
